--- a/arch/arm/boot/dts/sama5d27_handheld.dts
+++ b/arch/arm/boot/dts/sama5d27_handheld.dts
@@ -1,11 +1,7 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR MIT)
 /*
- * at91-sama5d27_som1_ek.dts - Device Tree file for SAMA5D27-SOM1-EK board
+ * sama5d27_handheld.dts - Device Tree file for my board
  *
- *  Copyright (c) 2017, Microchip Technology Inc.
- *                2016 Nicolas Ferre <nicolas.ferre@atmel.com>
- *                2017 Cristian Birsan <cristian.birsan@microchip.com>
- *                2017 Claudiu Beznea <claudiu.beznea@microchip.com>
  */
 /dts-v1/;
 #include "at91-sama5d27_som1.dtsi"
