--- a/arch/arm/boot/dts/sama5d27_handheld.dts
+++ b/arch/arm/boot/dts/sama5d27_handheld.dts
@@ -64,6 +64,8 @@
 			hlcdc: hlcdc@f0000000 {
 				status = "okay";
 				hlcdc-display-controller {
+					pinctrl-names = "defauls";
+					pinctrl-0 = <&pinctrl_lcd_base &pinctrl_my_lcd_rgb888>;
 					port@0 {
 						#address-cells = <1>;
 						#size-cells = <0>;
