--- a/arch/arm/boot/dts/sama5d27_handheld.dts
+++ b/arch/arm/boot/dts/sama5d27_handheld.dts
@@ -27,10 +27,17 @@
 
 	panel: panel {
 		compatible = "sitronix,st7262e43", "simple-panel";
+		#address-cells = <1>;
+		#size-cells = <0>;
 		status = "okay";
 
-		port {
-			panel_input: endpoint {
+		port@0 {
+			reg = <0>;
+			#address_cells = <1>;
+			#size-cells = <0>;
+			
+			panel_input: endpoint@0 {
+				reg <0>;
 				remote-endpoint = <&hlcdc_panel_output>;
 			};
 		};
