--- a/arch/arm/boot/dts/sama5d27_handheld.dts
+++ b/arch/arm/boot/dts/sama5d27_handheld.dts
@@ -505,8 +505,35 @@
 		};
 	};
 
-	panel: panel {
+	backlight: backlight {
+		compatible = "pwm-backlight";
+		pwms = <&hlcdc_pwm 0 50000 0>;
+		brightness-levels = <0 4 8 16 32 64 128 255>;
+		default-brightness-level = <7>;
+		power-supply = <&bl_reg>;
+		status = "okay";
+	};
+
+	bl_reg: backlight_regulator {
+		compatible = "regulator-fixed";
+		regulator-name = "backlight-power-supply";
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
+		status = "okay";
+	};
+
+	panel_reg: panel_regulator {
+		compatible = "regulator-fixed";
+		regulator-name = "panel-power-supply";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		status = "okay";
+	};
+
+	panel {
 		compatible = "sitronix,st7262e43", "simple-panel";
+		backlight = <&backlight>;
+		power-supply = <&panel_reg>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "okay";
